--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -6,8 +6,6 @@ body{
     padding:0;
     font-family: 'Segoe UI',sans-serif;
     font-size: 16px;
-    line-height: 1.42857;
-    color: v;
 } 
 
 a {text-decoration: none}
@@ -25,59 +23,68 @@ font-family: 'Segoe UI',sans-serif;
 
 .container {
     border: 0;
-    margin: 20pt auto;
-    padding: 30pt;
+    margin: 20px auto;
+   
     width: 871px;
     border: 1px solid #B2B2B3;
 }
 
-.news-container {
-
+.news-container, .top-container, footer {
+    padding: 10px 30px;
 }
 
 .green-line {
-    height: 5pt;
-    padding: 7.5pt 0;
+    height: 5px;
+    padding: 7.5px 0;
     border-style: none none solid none;
-    border-bottom-width: 2.25pt;
+    border-bottom-width: 2.25px;
     border-bottom-color: #CADC49;   
 }
 
 .blue-line {
-    height: 5pt;
-    padding: 7.5pt 0;
+    height: 5px;
+    padding: 7.5px 0;
     border-style: none none solid none;
-    border-bottom-width: 2.25pt;
+    border-bottom-width: 2.25px;
     border-bottom-color: #77CED7;
 }
 
 h3 {
     color: rgb(52, 58, 65);
-    font-size: 11.5pt;
+    font-size: 16px;
     font-family: "Segoe UI", sans-serif, serif, EmojiFont;
 }
 
 .title {
     color: rgb(52, 58, 65);
-    font-size: 12pt;
+    font-size: 16px;
     font-weight: bolder;
 }
 
 .dateTime {
     color: rgb(100, 109, 122);
-    font-size: 10.5pt;
+    font-size: 16px;
     font-weight: bolder;
 }
 
 .description {
     font-style: italic;
     color: rgb(100, 109, 122);
-    font-size: 13pt;
+    font-size: 14px;
 }
 
 footer {
-    padding: 20pt 0;
+    padding: 20px 0;
     text-align: center;
 }
 
-footer img { display: block; padding-top:10pt;margin: 0 auto; }
+footer img { display: block; padding-top:10px;margin: 0 auto; }
+
+header {
+    background-color: #77CED7;
+    width: 100%;
+    top: 0;
+}
+
+ul.menu { width: 100%; }
+ul.menu li { display: inline-block; color: white; vertical-align: middle; text-transform: uppercase; line-height: 60px; padding: 0 30px; text-underline-position: above;}
