--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -86,5 +86,28 @@ header {
     top: 0;
 }
 
+header a { color: white; }
 ul.menu { width: 100%; }
 ul.menu li { display: inline-block; color: white; vertical-align: middle; text-transform: uppercase; line-height: 60px; padding: 0 30px; text-underline-position: above;}
+
+.form-container { padding: 20px 10px; }
+.form-container legend { color: rgb(52, 58, 65);  font-size: 16px; }
+
+button { color: #fff; background-color: #77CED7; font-weight: 400; border: 1px solid transparent; padding: 10px 20px; font-size: 16px;line-height: 1.5;border-radius: 6px; }
+
+form input, form textarea {padding: 5px;
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 6px; 
+}
+
+form label { font-size: 16px; line-height: 1.5; font-weight: 600;}
+
+form .row { padding: 10px 20px;}
