--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -1,35 +1,56 @@
-body{
-    width:100%;
-    -webkit-text-size-adjust:100%;
-    -ms-text-size-adjust:100%;
-    margin:0;
-    padding:0;
-    font-family: 'Segoe UI',sans-serif;
+body {
+    width: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Segoe UI', sans-serif;
     font-size: 16px;
-} 
+}
 
-a {text-decoration: none}
-a {text-decoration: none !important; color: #77CED7;}
+a {
+    text-decoration: none
+}
 
-a:active, a:visited, a[href^="tel"], a[href^="sms"] { text-decoration: none; pointer-events: auto; cursor: default;}
-table td {border-collapse: collapse;}
+a {
+    text-decoration: none !important;
+    color: #77CED7;
+}
 
-table { border-collapse:collapse; }
-table td { border-collapse: collapse; }
+a:active,
+a:visited,
+a[href^="tel"],
+a[href^="sms"] {
+    text-decoration: none;
+    pointer-events: auto;
+    cursor: default;
+}
+
+table td {
+    border-collapse: collapse;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+table td {
+    border-collapse: collapse;
+}
 
 span {
-font-family: 'Segoe UI',sans-serif;
+    font-family: 'Segoe UI', sans-serif;
 }
 
 .container {
     border: 0;
     margin: 20px auto;
-   
-    width: 871px;
-    border: 1px solid #B2B2B3;
+
+    max-width: 871px;
 }
 
-.news-container, .top-container, footer {
+.news-container,
+footer {
     padding: 10px 30px;
 }
 
@@ -38,7 +59,20 @@ font-family: 'Segoe UI',sans-serif;
     padding: 7.5px 0;
     border-style: none none solid none;
     border-bottom-width: 2.25px;
-    border-bottom-color: #CADC49;   
+    border-bottom-color: #CADC49;
+}
+
+.news-container {
+    display: block;
+    text-decoration: none;    
+    border-radius: 10px;
+    overflow: hidden;
+
+    background-color: #ffffff;
+    box-shadow: 0 1px 2px 0 rgba(25, 27, 26, 0.2), 0 1px 8px 0 rgba(25, 27, 26, 0.1);
+
+    margin-bottom: 36px;
+    color:rgb(100, 109, 122);;
 }
 
 .blue-line {
@@ -51,13 +85,13 @@ font-family: 'Segoe UI',sans-serif;
 
 h3 {
     color: rgb(52, 58, 65);
-    font-size: 16px;
+    font-size: 24px;
     font-family: "Segoe UI", sans-serif, serif, EmojiFont;
 }
 
 .title {
     color: rgb(52, 58, 65);
-    font-size: 16px;
+    font-size: 24px;
     font-weight: bolder;
 }
 
@@ -67,6 +101,11 @@ h3 {
     font-weight: bolder;
 }
 
+.author {
+    color: rgb(100, 109, 122);
+    font-style: italic;
+}
+
 .description {
     font-style: italic;
     color: rgb(100, 109, 122);
@@ -74,28 +113,68 @@ h3 {
 }
 
 footer {
-    padding: 20px 0;
+    padding: 20px 0 0 0;
     text-align: center;
 }
 
-footer img { display: block; padding-top:10px;margin: 0 auto; }
+footer img {
+    display: block;
+    padding-top: 10px;
+    margin: 0 auto;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+}
 
 header {
     background-color: #77CED7;
     width: 100%;
     top: 0;
+    border-radius: 10px;
 }
 
-header a { color: white; }
-ul.menu { width: 100%; }
-ul.menu li { display: inline-block; color: white; vertical-align: middle; text-transform: uppercase; line-height: 60px; padding: 0 30px; text-underline-position: above;}
+header a {
+    color: white;
+}
 
-.form-container { padding: 20px 10px; }
-.form-container legend { color: rgb(52, 58, 65);  font-size: 16px; }
+ul.menu {
+    width: 100%;
+    margin-bottom: 36px;
+}
 
-button { color: #fff; background-color: #77CED7; font-weight: 400; border: 1px solid transparent; padding: 10px 20px; font-size: 16px;line-height: 1.5;border-radius: 6px; }
+ul.menu li {
+    display: inline-block;
+    color: white;
+    vertical-align: middle;
+    text-transform: uppercase;
+    line-height: 60px;
+    padding: 0 30px;
+    text-underline-position: above;
+}
 
-form input, form textarea {padding: 5px;
+.form-container {
+    padding: 20px 10px;
+}
+
+.form-container legend {
+    color: rgb(52, 58, 65);
+    font-size: 16px;
+}
+
+button {
+    color: #fff;
+    background-color: #77CED7;
+    font-weight: 400;
+    border: 1px solid transparent;
+    padding: 10px 20px;
+    font-size: 16px;
+    line-height: 1.5;
+    border-radius: 6px;
+}
+
+form input,
+form textarea {
+    padding: 5px;
     display: block;
     width: 100%;
     font-size: 16px;
@@ -105,9 +184,86 @@ form input, form textarea {padding: 5px;
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: 6px; 
+    border-radius: 6px;
 }
 
-form label { font-size: 16px; line-height: 1.5; font-weight: 600;}
+form label {
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 600;
+}
 
-form .row { padding: 10px 20px;}
+form .row {
+    padding: 10px 20px;
+}
+
+
+.loader {
+    font-size: 10px;
+    margin: 50px auto;
+    text-indent: -9999em;
+    width: 11em;
+    height: 11em;
+    border-radius: 50%;
+    background: gray;
+    background: -moz-linear-gradient(left, gray 10%, rgba(255, 255, 255, 0) 42%);
+    background: -webkit-linear-gradient(left, gray 10%, rgba(255, 255, 255, 0) 42%);
+    background: -o-linear-gradient(left, gray 10%, rgba(255, 255, 255, 0) 42%);
+    background: -ms-linear-gradient(left, gray 10%, rgba(255, 255, 255, 0) 42%);
+    background: linear-gradient(to right, gray 10%, rgba(255, 255, 255, 0) 42%);
+    position: relative;
+    -webkit-animation: load3 1.4s infinite linear;
+    animation: load3 1.4s infinite linear;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+}
+
+.loader:before {
+    width: 50%;
+    height: 50%;
+    background: gray;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+}
+
+.loader:after {
+    background: white;
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+@-webkit-keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes load3 {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
